# embedded-app-starter

./: .drone.yml  .gitignore  README.md  angular.json  package-lock.json  package.json  readme.txt  server_emulator.js
app-frontend/: package-lock.json  readme.txt  tsconfig.base.json
app-frontend/server_emulator/: settings.json
app-frontend/src/: index.html
app-frontend/src/app/: app.component.html  app.component.ts  app.module.ts  datatypes.ts  tools.ts  wsdata.service.ts
app-frontend/src/environments/: environment.ts
app-frontend/src/styles/: colors.less  common.less
app-software/: .gitignore  CMakeLists.txt  app-main.cpp  app.cpp  app.h  readme.txt  version.h
app-software/common_modules/: CMakeLists.txt  common_modules.h
app-software/common_modules/cmake_modules/: FindDvbpsi.cmake  common.cmake  oe-sdk_cross.cmake
app-software/common_modules/data_storage/: CMakeLists.txt  data_storage.cpp  data_storage.h  test_data_storage.cpp
app-software/common_modules/eventlog-api/: CMakeLists.txt  eventlog.cpp  eventlog.h
app-software/common_modules/exec_lock/: CMakeLists.txt  exec-lock.cpp  exec-lock.h
app-software/common_modules/linux-input/: CMakeLists.txt  linux-input.cpp  linux-input.h
app-software/common_modules/perp_server/: CMakeLists.txt  perp_server.cpp  perp_server.h  vgpi_api.cpp  vgpi_api.h  vgpi_client_data.h  vgpi_server.cpp  vgpi_server.h
app-software/common_modules/profitt-security/: CMakeLists.txt  profitt-security.c  profitt-security.h
app-software/common_modules/snmp_agent/: CMakeLists.txt  snmp_agent.cpp  snmp_agent.h  snmp_parser.cpp  snmp_parser.h  snmp_process.cpp  snmp_process.h  test_snmp_parser.cpp  test_snmp_process.cpp
app-software/common_modules/spi-altera/: CMakeLists.txt  spi-altera.cpp  spi-altera.h  spi.cpp  spi.h  spi_reg_read.cpp  spi_reg_write.cpp
app-software/common_modules/uptime-utils/: CMakeLists.txt  uptime_utils.cpp  uptime_utils.h
app-software/common_modules/watchdog/: CMakeLists.txt  watchdog.cpp  watchdog.h
app-software/common_modules/web_socket_server/: CMakeLists.txt  websocketserver.cpp  websocketserver.h
app-software/web_app/: web_app.cpp  web_app.h
src/: index.html  styles.less
src/app/: app-routing.module.ts  app.component.ts  app.module.ts  datatypes.ts  tools.ts  websocket.service.ts  wsdata.service.ts
src/app/components/: components.module.ts
src/app/views/: main.component.html  main.component.less  main.component.ts  settings.component.html  (+2 more)
src/assets/: version.json
src/environments/: environment.prod.ts  environment.ts
src/styles/: common.less
(+63 files in other folders)
